--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -8,6 +8,11 @@
 <% s = OpenStruct.new(fbapp.get_object('me')) %>
 <% Rails.logger.debug s %>
 <p><a href = https://www.facebook.com/app_scoped_user_id/10206572390010656><%= s.name %></a></p>
+<%= form_for @post, :url => '/post', :html => {:method => :post} do |f| %>
+<%= f.label :content %>
+<%= f.text_area :content %>
+<%= f.submit %>
+<% end %>
 <% end %>
 <% else %>
 <%= link_to 'SignUp',  new_user_path  %>
