--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SnoozyPost</title>
+  <title>Myspace</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -9,7 +9,7 @@
 <body>
 <header class="navbar navbar-fixed-top navbar-inverse">
     <div class="container">
-      <%= link_to "SnoozyPost", root_path, id: "logo" %>
+      <%= link_to "MySpace", root_path, id: "logo" %>
       <nav>
         <ul class="nav navbar-nav navbar-right">
           <li><%= link_to "Home",   home_path %></li>
