--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,10 @@
           <li><%= link_to "Home",   home_path %></li>
             <% if signed_in? %>
               <li><%= link_to 'My Profile',  user_path(current_user.id)  %></li>
-              <li><%= link_to 'Logout',  logout_path, method: :delete %></li>
+              <li><%= link_to 'Logout',  destroy_user_session_path, method: :delete %></li>
             <% else %>
-              <li><%= link_to 'Login',  login_path %></li>
-              <li><%= link_to "Register", new_user_path %></li>
+              <li><%= link_to 'Login',  new_user_session_path %></li>
+              <li><%= link_to "Register", new_user_registration_path %></li>
             <% end %>
         </ul>
       </nav>
