--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li><%= link_to "Home",   home_path %></li>
             <% if signed_in? %>
-              <li><%= link_to 'My Profile',  profile_path(current_user.id)  %></li>
+              <li><%= link_to 'My Profile',  profile_path(current_user)  %></li>
               <li><%= link_to 'Logout',  destroy_user_session_path, method: :delete %></li>
             <% else %>
               <li><%= link_to 'Login',  new_user_session_path %></li>
