--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -4,12 +4,12 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :first_name, required: true, autofocus: true %>
-    <%= f.input :last_name, required: true %>
-    <%= f.input :email, required: true %>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-    <%= f.input :password_confirmation, required: true %>
-    <%= f.input :phone_number %>
+    <%= f.input :first_name, required: true, label: false, placeholder: 'First Name', autofocus: true %>
+    <%= f.input :last_name, required: true, label: false, placeholder: 'Last Name' %>
+    <%= f.input :email, required: true, label: false, placeholder: 'Email' %>
+    <%= f.input :password, required: true, label: false, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), placeholder: 'Password' %>
+    <%= f.input :password_confirmation, required: true, label: false, placeholder: 'Password Confirmation' %>
+    <%= f.input :phone_number, required: true, label: false, placeholder: 'Phone Number' %>
   </div>
 
   <div class="form-actions">
